fixing word wrap for long urls

--- a/client/src/components/Url.css
+++ b/client/src/components/Url.css
@@ -6,6 +6,7 @@
 
 .Url-shortLink,
 .Url-destination {
+  word-break: break-all;
   position: relative;
   padding-left: 80px;
 }
